--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,11 +8,38 @@
     <title>Shop</title>
 </head>
 <body>
+<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
+<div class="container">
+        <div class="row">
+            <div class="span12">
+                <div class="head">
+                    <div class="row-fluid">
+                        <div class="span12">
+                            <div class="span6">
+                                <h1 class="muted">Logos shop</h1>
+                            </div>
 
+                            <div class="span4 offset2" style="margin-top:15px;">
+                                <button class="btn pull-right" type="button" id="login">Login</button>
+                            </div>
+                        </div>
+                    </div>
 
-    <a href="pages/login/login.html">Login</a>
-    <a href="pages/registration/registration.html">Registration</a>
-
+                    <div class="navbar">
+                        <div class="navbar-inner">
+                            <div class="container">
+                                <ul class="nav">
+                                    <li id="forAdminButton">
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <script src="index.js"></script>
