--- a/src/main/webapp/pages/login/login.html
+++ b/src/main/webapp/pages/login/login.html
@@ -29,7 +29,7 @@
                             <button type="button" class="btn btn-info" id="login">Log in</button>
                         </div>
                         <div id="register-link" class="text-right">
-                            <a href="../registration/index.html" class="text-info">Register here</a>
+                            <a href="../registration/registration.html" class="text-info">Register here</a>
                         </div>
                     </div>
                 </div>
