--- a/src/main/webapp/pages/login/login.html
+++ b/src/main/webapp/pages/login/login.html
@@ -25,11 +25,11 @@
                             <input type="password" name="password" id="password" class="form-control" required>
                         </div>
                         <div class="form-group">
-                            <a href="../../index.html">Back</a><br>
+                            <a href="/index.html">Back</a><br>
                             <button type="button" class="btn btn-info" id="login">Log in</button>
                         </div>
                         <div id="register-link" class="text-right">
-                            <a href="../registration/registration.html" class="text-info">Register here</a>
+                            <a href="/pages/registration/registration.html" class="text-info">Register here</a>
                         </div>
                     </div>
                 </div>
