--- a/src/main/webapp/pages/registration/registration.html
+++ b/src/main/webapp/pages/registration/registration.html
@@ -12,7 +12,7 @@
 <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 
-<a href="../../index.html">Back</a>
+<a href="/index.html">Back</a>
 
 
 <div class="container">
